[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0.192157, 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -110.0
margin_right = 80.0
margin_bottom = -49.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0.211765, 1 )
text = "Back"
flat = true

[node name="settings2" type="TabContainer" parent="."]
margin_left = 50.0
margin_top = 20.0
margin_right = 1870.0
margin_bottom = 950.0
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
custom_fonts/font = SubResource( 5 )

[node name=" Audio " type="Tabs" parent="settings2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 81.0
margin_right = -2.0
margin_bottom = -2.0
custom_styles/tab_bg = SubResource( 6 )
custom_styles/panel = SubResource( 7 )
custom_styles/button_pressed = SubResource( 8 )
custom_fonts/font = SubResource( 9 )

[node name="settings" type="HBoxContainer" parent="settings2/ Audio "]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -571.0
margin_top = -140.0
margin_right = 571.0
margin_bottom = 140.0
custom_constants/separation = 10
alignment = 1

[node name="elements" type="VBoxContainer" parent="settings2/ Audio /settings"]
editor/display_folded = true
margin_left = 197.0
margin_right = 633.0
margin_bottom = 280.0
custom_constants/separation = 20
alignment = 1

[node name="Music" type="Label" parent="settings2/ Audio /settings/elements"]
margin_right = 436.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Music . . . . . . . . . . . . . . . ."

[node name="Sound Effects" type="Label" parent="settings2/ Audio /settings/elements"]
margin_top = 75.0
margin_right = 436.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "Sound Effects . . . . . . . . . ."

[node name="Buttons" type="Label" parent="settings2/ Audio /settings/elements"]
margin_top = 150.0
margin_right = 436.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "Buttons . . . . . . . . . . . . . . ."

[node name="Label2" type="Label" parent="settings2/ Audio /settings/elements"]
margin_top = 225.0
margin_right = 436.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
text = "Master . . . . . . . . . . . . . . . "

[node name="elements2" type="VBoxContainer" parent="settings2/ Audio /settings"]
margin_left = 643.0
margin_right = 893.0
margin_bottom = 280.0
rect_min_size = Vector2( 160, 0 )
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="music" type="HSlider" parent="settings2/ Audio /settings/elements2"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 250, 0 )
focus_mode = 1
custom_styles/focus = SubResource( 10 )
min_value = -50.0
max_value = 0.0
step = 5.0
focus_mode = 1

[node name="effects" type="HSlider" parent="settings2/ Audio /settings/elements2"]
margin_top = 94.0
margin_right = 250.0
margin_bottom = 110.0
focus_mode = 1
custom_styles/focus = SubResource( 10 )
min_value = -50.0
max_value = 0.0
step = 5.0
focus_mode = 1

[node name="buttons" type="HSlider" parent="settings2/ Audio /settings/elements2"]
margin_top = 170.0
margin_right = 250.0
margin_bottom = 186.0
focus_mode = 1
custom_styles/focus = SubResource( 10 )
min_value = -50.0
max_value = 0.0
step = 5.0
focus_mode = 1

[node name="master" type="HSlider" parent="settings2/ Audio /settings/elements2"]
margin_top = 246.0
margin_right = 250.0
margin_bottom = 262.0
focus_mode = 1
custom_styles/focus = SubResource( 10 )
min_value = -50.0
max_value = 0.0
step = 5.0
focus_mode = 1

[node name="values" type="VBoxContainer" parent="settings2/ Audio /settings"]
margin_left = 903.0
margin_right = 945.0
margin_bottom = 280.0
custom_constants/separation = 20
alignment = 1

[node name="Music" type="Label" parent="settings2/ Audio /settings/values"]
margin_right = 42.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="Sound Effects" type="Label" parent="settings2/ Audio /settings/values"]
margin_top = 75.0
margin_right = 42.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="Buttons" type="Label" parent="settings2/ Audio /settings/values"]
margin_top = 150.0
margin_right = 42.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="Label2" type="Label" parent="settings2/ Audio /settings/values"]
margin_top = 225.0
margin_right = 42.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name=" Video " type="Tabs" parent="settings2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 81.0
margin_right = -2.0
margin_bottom = -2.0
custom_styles/button_pressed = SubResource( 8 )
custom_fonts/font = SubResource( 9 )

[node name="settings" type="HBoxContainer" parent="settings2/ Video "]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = -47.5
margin_right = 356.5
margin_bottom = 84.5
custom_constants/separation = 10

[node name="elements" type="VBoxContainer" parent="settings2/ Video /settings"]
margin_right = 520.0
margin_bottom = 132.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="settings2/ Video /settings/elements"]
margin_right = 520.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Visual Effects . . . . . . . . . . . . . ."

[node name="elements2" type="VBoxContainer" parent="settings2/ Video /settings"]
margin_left = 530.0
margin_right = 690.0
margin_bottom = 132.0
rect_min_size = Vector2( 160, 0 )
custom_constants/separation = 10

[node name="vfx" type="Button" parent="settings2/ Video /settings/elements2"]
margin_right = 160.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.376471, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.2, 0.2, 1 )
text = "Enabled"
flat = true

[connection signal="pressed" from="Label3" to="." method="_on_Label3_pressed"]
[connection signal="tab_selected" from="settings2" to="." method="_on_settings2_tab_selected"]
[connection signal="tab_clicked" from="settings2/ Audio " to="." method="_on__Audio__tab_clicked"]
[connection signal="value_changed" from="settings2/ Audio /settings/elements2/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="settings2/ Audio /settings/elements2/effects" to="." method="_on_effects_value_changed"]
[connection signal="value_changed" from="settings2/ Audio /settings/elements2/buttons" to="." method="_on_buttons_value_changed"]
[connection signal="value_changed" from="settings2/ Audio /settings/elements2/master" to="." method="_on_master_value_changed"]
[connection signal="tab_clicked" from="settings2/ Video " to="." method="_on__Video__tab_clicked"]
[connection signal="pressed" from="settings2/ Video /settings/elements2/vfx" to="." method="_on_vfx_pressed"]
